# MSFT_project

./: README.md
doosan-robot/dsr_example/py/scripts/demo/: dance_m1013.py
doosan_gazebo_sim/: CMakeLists.txt  package.xml
doosan_gazebo_sim/include/doosan_gazebo_sim/: gazebo_cube.h
doosan_gazebo_sim/launch/: gazebo_sim.launch
doosan_gazebo_sim/models/Archive/qr_test/: model.config  model.sdf
doosan_gazebo_sim/models/Archive/qr_test/materials/scripts/: model.material
doosan_gazebo_sim/models/cube/: model.sdf
doosan_gazebo_sim/models/qr_simple/: model.config  model.sdf
doosan_gazebo_sim/script/: dance_m1013.py  generate_waypoint.py  orbit_script  qr_material.material  waypoint.xml
doosan_gazebo_sim/script/test/output/qr_simple/: model.sdf
doosan_gazebo_sim/script/test/output/qr_simple/materials/scripts/: model.material
doosan_gazebo_sim/src/: gazebo_cube.cpp  gazebo_cube_node.cpp
doosan_gazebo_sim/src/Archive/: cpp  orientation.cpp  visp_test.cpp
doosan_gazebo_sim/worlds/: animated_box.world  test.world
doosan_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
doosan_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  m0609.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
doosan_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/launch/: arm_urdf.launch  custom.launch  custom_gazebo.launch  custom_gazebo_test.launch
manipulator_description/meshes/: box_wifibot.stl
manipulator_description/rviz/: default.rviz
manipulator_description/urdf/: Custom_dsr.urdf
manipulator_description/worlds/: cube.world  cube_test.world
manipulator_description/xacro/: Custom_dsr.urdf.xacro  Custom_dsr_test.urdf.xacro  camera.xacro  gazebo.xacro  onrobot_rg2.xacro  onrobot_rg2_gazebo.xacro  onrobot_rg2_model_macro.xacro
