<?xml version="1.0"?>
<package format="2">
  <name>doosan_gazebo_sim</name>
  <version>0.0.0</version>
  <description>The doosan_gazebo_sim package</description>


  <maintainer email="greg@todo.todo">greg</maintainer>


  <license>TODO</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_core</depend>
  <depend>tf</depend>

  <!-- <depend>VISP</depend>
  <depend>visp_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
